--- a/quickstarts/whereami/cloudbuild.yaml
+++ b/quickstarts/whereami/cloudbuild.yaml
@@ -21,11 +21,7 @@ steps:
   args:
     - 'build'
     - '-t'
-    - 'gcr.io/google-samples/whereami:v1.2.22'
-    - '-t'
-    - 'us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.22'
-    - '-t'
-    - 'europe-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.22'
+    - 'us-docker.pkg.dev/qwiklabs-gcp-02-db9ca233d102/cepf-app-mod-repo:v1.2.22'
     - '.'
   dir: 'quickstarts/whereami'
 - name: ubuntu
@@ -38,6 +34,6 @@ steps:
     helm push whereami-1.2.22.tgz oci://us-docker.pkg.dev/google-samples/charts
 
 images:
-  - 'gcr.io/google-samples/whereami:v1.2.22'
-  - 'us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.22'
-  - 'europe-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.22'
+  - 'us-docker.pkg.dev/qwiklabs-gcp-02-db9ca233d102/cepf-app-mod-repo:v1.2.22'
+options:
+  logging: CLOUD_LOGGING_ONLY
